--- a/style.css
+++ b/style.css
@@ -27,6 +27,11 @@ a:hover,a:active {
 
 p {
 	line-height: 1.75;
+	display: block;
+	margin-block-start: 8px;
+	margin-block-end: 8px;
+	margin-inline-start: 0px;
+	margin-inline-end: 0px;
 }
 
 pre,code {
@@ -449,9 +454,9 @@ img.alignright {
 }
 
 @media(max-width:767px) {
-	body {
+	/* body {
 		font-size: 81.25%;
-	}
+	} */
 
 	#nav-menu a {
 		float: none;
@@ -599,8 +604,8 @@ img.alignright {
 	outline: none;
 }
 #comments .avatar {
-	width: 44px;
-	height: 44px;
+	width: 40px;
+	height: 40px;
 	border-radius: 20040725px;
 }
 #comments .submit:hover {
@@ -667,13 +672,13 @@ img.alignright {
 
 /* 文章 */
 .post-title {
-	font-size: 24px;
+	font-size: 20px;
 }
 .post-meta {
 	margin-top: 0px !important;
 }
 .post-title-atpage {
-	font-size: 32px;
+	font-size: 24px;
 	margin-top: 32px;
 	text-align: center;
 }
@@ -946,8 +951,9 @@ ol.page-navigator > .current > a {
 }
 .archive-title {
 	margin: 0;
+	margin-bottom: 10px;
 	padding: 0;
-	font-size: 15px;
+	font-size: 16px;
 	font-weight: normal;
 }
 .archive-title > a {
@@ -981,7 +987,7 @@ pre {
 
 .sidebar-foot {
 	color: #888;
-	font-size: 90%;
+	font-size: 80%;
 	font-family: "Droid Serif",
 		Georgia,
 		"Times New Roman",
